--- a/app_unizap/pubspec.yaml
+++ b/app_unizap/pubspec.yaml
@@ -34,11 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  cloud_firestore: ^3.1.14
-  image_picker: ^0.8.5+2
+  cloud_firestore: ^3.1.15
+  image_picker: ^0.8.5+3
   google_sign_in: ^5.3.1
-  firebase_storage: ^10.2.15
-  firebase_auth: ^3.3.17
+  firebase_storage: ^10.2.16
+  firebase_auth: ^3.3.18
+  font_awesome_flutter: ^10.1.0
 
 dev_dependencies:
   flutter_test:
